# books_analysis

./: books_data.csv  main.py  pyproject.toml  requirements.txt
